--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,15 @@
-.import/
-.mono/
+# Godot-specific ignores
+*/.import/
+*/import/
+*/export.cfg
+*/export_presets.cfg
+
+# Imported translations (automatically generated from CSV files)
+*/*.translation
+
+# Mono-specific ignores
+*/.mono/
+*/data_*/
+
+*/addons/
+*/builds/
