--- a/SharpScapeClient/SharpScapeClient.csproj
+++ b/SharpScapeClient/SharpScapeClient.csproj
@@ -2,4 +2,7 @@
   <PropertyGroup>
     <TargetFramework>net472</TargetFramework>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="Portable.BouncyCastle" Version="1.9.0" />
+  </ItemGroup>
 </Project>
