Setup dev scene and export templates

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -1,13 +1,13 @@
 [preset.0]
 
-name="HTML5"
+name="HTML5 Client"
 platform="HTML5"
 runnable=true
 custom_features=""
 export_filter="all_resources"
-include_filter="server/*,development/*"
-exclude_filter=""
-export_path="../../../exports/html5/SharpScapeClient/SharpScapeClient.html"
+include_filter=""
+exclude_filter="server/*,development.tscn"
+export_path=".export/html5/SharpScapeClient.html"
 script_export_mode=1
 script_encryption_key=""
 
@@ -35,14 +35,14 @@ progressive_web_app/background_color=Color( 0, 0, 0, 1 )
 
 [preset.1]
 
-name="Linux/X11"
+name="Linux/X11 Server"
 platform="Linux/X11"
 runnable=true
 custom_features=""
 export_filter="all_resources"
-include_filter="client/*,development/*"
-exclude_filter=""
-export_path=""
+include_filter="*.pem"
+exclude_filter="client/*,development.tscn"
+export_path=".export/linux/SharpScapeServer.x86_64"
 script_export_mode=1
 script_encryption_key=""
 
