--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -40,7 +40,7 @@ platform="Linux/X11"
 runnable=true
 custom_features=""
 export_filter="all_resources"
-include_filter="*.pem"
+include_filter=""
 exclude_filter="client/*,development.tscn"
 export_path=".export/linux/SharpScapeServer.x86_64"
 script_export_mode=1
